Nadano style container

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container">
         <nav class="navigation">
           <a class="logo link" href="index.html"
@@ -58,7 +58,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
       <!-- HERO -->
       <section class="hero">
@@ -125,7 +125,7 @@
       </section>
 
       <!-- Work -->
-      <section class="work section">
+      <!-- <section class="work section">
         <div class="container">
           <h2 class="secondary-header">Czym się zajmujemy</h2>
           <ul class="work-list list">
@@ -161,10 +161,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Team-->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container">
           <h2 class="secondary-header">Nasz zespół</h2>
           <ul class="team-list list">
@@ -343,10 +343,10 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
 
     <!-- Customers  -->
-    <section class="customer section">
+    <!-- <section class="customer section">
       <div class="container">
         <h2 class="secondary-header">Nasi klienci</h2>
         <ul class="customer-list list">
@@ -394,10 +394,10 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer__web">
           <a class="logo link" href="index.html"
@@ -424,7 +424,8 @@
             </ul>
           </address>
         </div>
-        <!-- Social -->
+
+        Social
         <div class="footer-social">
           <h3 class="third-header footer-header">dołącz do nas</h3>
           <ul class="social-list list">
@@ -458,7 +459,8 @@
             </li>
           </ul>
         </div>
-        <!-- Newsletter -->
+
+        Newsletter
         <div class="newsletter">
           <h3 class="third-header footer-header">Zapisz sie do newslettera</h3>
           <form class="newsletter__form">
@@ -474,9 +476,10 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
+
     <!-- Window Modal -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__close-btn" data-modal-close>
           <svg class="modal__close-btn-icon" width="11" height="11">
@@ -526,7 +529,8 @@
           <button class="modal-form__btn" type="submit">Wyślij</button>
         </form>
       </div>
-    </div>
+    </div> -->
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
