Nadano style sekcji headers

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </section>
 
       <!-- Work -->
-      <!-- <section class="work section">
+      <section class="work section">
         <div class="container">
           <h2 class="secondary-header">Czym się zajmujemy</h2>
           <ul class="work-list list">
@@ -161,7 +161,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Team-->
       <!-- <section class="team section">
