--- a/index.html
+++ b/index.html
@@ -413,37 +413,38 @@
     </section>
 
     <!-- Footer -->
-    <!-- <footer class="footer">
-      <div class="container">
-        <div class="footer__web">
-          <a class="logo link" href="index.html"
-            ><span class="logo-blue-theme">Web</span><span class="logo-dark-theme">Studio</span></a
-          >
-          <address class="address">
-            <ul class="address-list list">
-              <li class="address-list__item">
-                <a
-                  class="address-list__map link"
-                  href="https://goo.gl/maps/gkjf9qV8hJjLytW16"
-                  target="_blank"
-                  >m. Warszawa, Aleje Jerozolimskie 21
-                </a>
-              </li>
-              <li class="address-list__item">
-                <a class="address-list__link link" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
-              </li>
-              <li class="address-list__item">
-                <a class="address-list__link link" href="tel:+48111111111">+48 111 111 111</a>
-              </li>
-            </ul>
-          </address>
-        </div>
+    <footer class="footer">
+      <div class="footer__container container ">
+        <div class="footer__wrapper">
+          <div class="footer__web">
+            <a class="footer-logo logo link" href="index.html"
+              ><span class="logo-blue-theme">Web</span><span class="logo-dark-theme">Studio</span></a
+            >
+            <address class="address">
+              <ul class="address-list list">
+                <li class="address-list__item">
+                  <a
+                    class="address-list__map link"
+                    href="https://goo.gl/maps/gkjf9qV8hJjLytW16"
+                    target="_blank"
+                    >m. Warszawa, Aleje Jerozolimskie 21
+                  </a>
+                </li>
+                <li class="address-list__item">
+                  <a class="address-list__link  link" href="mailto:info@example.com"
+                    >info@example.com</a
+                  >
+                </li>
+                <li class="address-list__item">
+                  <a class="address-list__link link" href="tel:+48111111111">+48 111 111 111</a>
+                </li>
+              </ul>
+            </address>
+          </div>
 
-        Social
-        <div class="footer-social">
-          <h3 class="third-header footer-header">dołącz do nas</h3>
+        <!-- Social -->
+        <div class="footer__social">
+          <h3 class="third-header footer__third-header">dołącz do nas</h3>
           <ul class="social-list list">
             <li class="social-list__item">
               <a href="#" class="social-list__link">
@@ -475,10 +476,11 @@
             </li>
           </ul>
         </div>
+      </div>
 
-        Newsletter
-        <div class="newsletter">
-          <h3 class="third-header footer-header">Zapisz sie do newslettera</h3>
+        <!-- Newsletter -->
+        <div class="foooter__newsletter">
+          <h3 class="third-header footer__third-header">Zapisz sie do newslettera</h3>
           <form class="newsletter__form">
             <label class="newsletter__label">
               <input class="newsletter__email" type="email" name="email" placeholder="E-mail">
@@ -492,7 +494,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Window Modal -->
     <!-- <div class="backdrop is-hidden" data-modal>
