--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
       </div>
 
         <!-- Newsletter -->
-        <div class="foooter__newsletter">
+        <div class="footer__newsletter">
           <h3 class="third-header footer__third-header">Zapisz sie do newslettera</h3>
           <form class="newsletter__form">
             <label class="newsletter__label">
