--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
   <body>
     <!-- HEADER -->
-    <!-- <header class="header">
-      <div class="container">
+    <header class="header">
+      <div class="header-container container">
         <nav class="navigation">
           <a class="logo link" href="index.html"
             ><span class="logo-blue-theme">Web</span><span class="logo-light-theme">Studio</span></a
@@ -41,7 +41,7 @@
         </nav>
         <ul class="place-list list">
           <li class="place-list__item">
-            <a class="place-list__link link" href="mailto:info@devstudio.com">
+            <a class="place-list__link place-list__link-mail link" href="mailto:info@devstudio.com">
               <svg class="place-list__icon" width="22" height="18">
                 <use href="./images/svg/icon.svg#icon-envelope"></use>
               </svg>
@@ -49,7 +49,7 @@
             >
           </li>
           <li class="place-list__item list">
-            <a class="place-list__link link" href="tel:+48111111111">
+            <a class="place-list__link place-list__link-phone link" href="tel:+48111111111">
               <svg class="place-list__icon" width="16" height="22">
                 <use href="./images/svg/icon.svg#icon-smartphone"></use>
               </svg>
@@ -58,7 +58,7 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
 
       <!-- HERO -->
       <section class="hero">
@@ -550,6 +550,7 @@
     </div> -->
 
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
 
