--- a/index.html
+++ b/index.html
@@ -103,9 +103,6 @@
                         rel="noopener noreferrer">Linkedin</a></li>
             </ul>
       </div>
-
-
-
     </header>
 
     <!-- HERO -->
@@ -219,6 +216,7 @@
           <ul class="team-list list">
             <li class="team-list__item">
               <picture>
+                <!-- I SPOSOB -->
                 <source
                   srcset="
                     ./images/team/mobile/product-mobile.jpg,
